--- a/src/assets/style/layout.scss
+++ b/src/assets/style/layout.scss
@@ -38,8 +38,9 @@ body,
   transform: translateY(-50%);
 }
 .module-list{
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
+  padding: 0;
   &:after {
     content: '';
     display: block;
@@ -52,14 +53,14 @@ body,
     float: left;
     width: 33.33%;
     text-align: center;
-    height: 120px;
+    padding: 40px 10px;
     cursor: pointer;
     transition: all .3s;
     &:hover {
       transform: scale(1.2);
     }
     .name {
-      font-size: 20px;
+      font-size: 16px;
       line-height: 50px;
     }
     .description {
