--- a/src/assets/style/layout.scss
+++ b/src/assets/style/layout.scss
@@ -39,18 +39,12 @@ body,
 }
 .module-list{
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 0;
-  &:after {
-    content: '';
-    display: block;
-    clear: both;
-    height: 0;
-    overflow: hidden;
-    visibility: hidden;
-  }
+  display: flex;
+  flex-wrap: wrap;
   .module-li {
-    float: left;
     width: 33.33%;
     text-align: center;
     padding: 40px 10px;
